# vistacli

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/vistacli/: __init__.py  api.py  auth.py  cli.py  upload.py
