[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vistacli"
version = "1.0.0"
description = "Command-line tools for interacting with Vista Social"
authors = [
    {name = "Ryan Moon", email = "ryan@section26.org"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25.0",
    "browser-cookie3>=0.19.0",
    "click>=8.1.0",
    "pathlib2>=2.3.7; python_version < '3.4'",
]

[project.scripts]
vsauth = "vistacli.cli:vsauth"
vsdir = "vistacli.cli:vsdir"
vsput = "vistacli.cli:vsput"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"vistacli" = ["config/*.json"] 